# PySwitch

./: .env  .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  test.py
PySwitch/: startup.py
PySwitch/common/: __init__.py  bounded_set.py  config.py  types.py
PySwitch/gui/: application.py  subinterfaces.py
PySwitch/network/: __init__.py  common.py  core.py  frame.py  frame_builder.py  interface.py  mac_table.py  service.py  sniffer.py  types.py
docs/: additional_new_spec.md  documentation.md
